marquee and ad alignment fix

--- a/_assets/stylesheets/layout.scss
+++ b/_assets/stylesheets/layout.scss
@@ -137,29 +137,11 @@ body
     padding: 6px 0;
   }
 
-  .marquee
-  {
-    .image, .video
-    {
-      margin-top: 18px;
-    }
-  }
-
   .singleton, .collection
   {
     .share-this
     {
       margin-top: 9px;
-    }
-
-    .image, .video
-    {
-      margin-top: 18px;
-    }
-
-    h1.title
-    {
-      margin-top: 18px;
     }
 
     .post-body
